# stream_copier

./: .gitignore  BENCHMARK_RESULTS.md  CODE_EXPLAINED.md  README.md  download_transcripts.py  start.sh
backend/: .env.example  pyproject.toml  reproduce_benchmarks.sh
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: audio.py  config.py
backend/app/models/: domain.py
backend/app/services/: event_hub.py  session_manager.py
backend/app/services/execution/: ninjatrader.py  risk.py
backend/app/services/interpretation/: __init__.py  ablate_tfidf_vocab.py  action_language.py  ai_annotation_review.py  ai_transcript_annotator.py  analyze_results.py  benchmark_models.py  build_hard_negative_corpus.py  build_reviewed_ai_corpus.py  build_reviewed_execution_dataset.py  candidate_detector.py  cleanup_training_data.py  dump_misclassified.py  embedding_gate.py  gemini_fallback.py  intent_context.py  local_classifier.py  (+7 more)
backend/app/tests/: test_action_language.py  test_ai_annotation_review.py  test_ai_transcript_annotator.py  test_analyze_results.py  test_audio.py  test_benchmark_models.py  test_build_hard_negative_corpus.py  test_build_reviewed_ai_corpus.py  test_build_reviewed_execution_dataset.py  test_embedding_gate.py  test_gemini_fallback.py  test_interpreter.py  test_local_whisper_preview.py  test_ninjatrader_executor.py  test_risk_engine.py  test_segmenter.py  test_session_manager.py  test_session_store.py  test_streaming_preview.py  test_train_local_classifier.py  test_transcript_normalizer.py  test_youtube_captions.py
(+134 files in other folders)
